finalize `getMatch` and `getMatchTimeline`

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "lol-constants": "^2.3.0",
-    "node-fetch": "^2.6.7"
+    "node-fetch": "^2.6.7",
+    "rift-api-utils": "^2.1.0"
   }
 }
